# g-flow

./: LICENSE  README.md  pyproject.toml
src/g_flow/: main.py
tests/: test_gflow.py
