[tool.poetry]
name = "g-flow"
version = "0.1.0"
description = "Uma implementação gitflow"
authors = ["Guionardo <guionardo@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
packaging = "^23.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
